// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BooksPage correctly with full size 1`] = `
<div
  className="container"
>
  <h2>
    My never-ending reading list!
  </h2>
  <p>
    I also like to read, but sadly my reading pace is completely outmatched by my ability to buy books I think I'd like. Never-the-less, here are the books I would some day like to read!
  </p>
  <br />
  <DataCollection
    endpoint="http://www.ryankrol.co.uk/api/books"
    itemTag={[Function]}
  />
</div>
`;

exports[`renders BooksPage correctly with reduced size 1`] = `
<div
  className="container"
>
  <h2>
    My never-ending reading list!
  </h2>
  <p>
    I also like to read, but sadly my reading pace is completely outmatched by my ability to buy books I think I'd like. Never-the-less, here are the books I would some day like to read!
  </p>
  <br />
  <DataCollection
    endpoint="http://www.ryankrol.co.uk/api/books"
    itemTag={[Function]}
    outputSize={20}
  />
  <Link
    className="seeMore"
    to="/ReadingList"
  >
    <h2>
      ...
    </h2>
  </Link>
</div>
`;
